--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "andreiio/blade-iconoir": "^4.4",
+        "andreiio/blade-remix-icon": "^3.3",
+        "codeat3/blade-game-icons": "^1.4",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "owenvoke/blade-fontawesome": "^2.6",
+        "troccoli/blade-health-icons": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
