--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "andreiio/blade-iconoir": "^4.4",
         "andreiio/blade-remix-icon": "^3.3",
+        "bezhansalleh/filament-shield": "^3.2",
         "codeat3/blade-game-icons": "^1.4",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
