--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "bezhansalleh/filament-shield": "^3.2",
         "codeat3/blade-game-icons": "^1.4",
         "filament/filament": "^3.2",
-        "joaopaulolndev/filament-edit-profile": "*",
+        "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "owenvoke/blade-fontawesome": "^2.6",
