filter kk di penduduk

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
+FILAMENT_FILESYSTEM_DISK=export
 # APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
